--- a/css/home.css
+++ b/css/home.css
@@ -51,7 +51,7 @@ body
     display: none;
 }
 
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 640px) {
     .topnav {
   background-color: #333;
 }
@@ -66,7 +66,7 @@ body
   }
 }
 
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 640px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
