change bg color
problem is a size of bg class when its go to screen size <414

--- a/css/home.css
+++ b/css/home.css
@@ -11,7 +11,8 @@ body
     padding: 0;
 }
 .bg{
-    background: #478ef6;
+    background: linear-gradient(335deg,#478ef6,#aac8f5);
+    display: block;
     height: 400px;
 }
 
