--- a/css/home.css
+++ b/css/home.css
@@ -12,7 +12,6 @@ body
 {
     background: #f4f4f4;
     margin:0;
-    width: 100%;
 }
 *{
     font-family: 'Kanit', sans-serif;
@@ -23,8 +22,9 @@ body
 .bg{
     background: linear-gradient(335deg,#478ef6,#aac8f5);
     display: block;
-    width: 100%;
+
     height: 400px;
+    overflow-x: hidden;
 }
 
 #logo{
@@ -116,7 +116,7 @@ body
     width: 100%;
     height: 50px;
     margin-top: 3%; 
-    margin-left: 7%;
+   
     display: block;
 }
 #chk{
@@ -125,12 +125,14 @@ body
     height: 100%;
 }
 #lb{
+    width: 10%;
     height: 100%;
     display: block;
     float: left;
     position: relative;
 }
 #rb{
+    width: 70%;
     height: 100%;
     display: block;
     float: left;
@@ -141,18 +143,26 @@ body
     display: block;
     font-size: 1.5em;
     color: black;
-    margin-left:10%; 
+    margin-left:3%; 
     padding-top: 1.3%;
     font-family: 'Superspace';
 }
 @media only screen and (max-width: 640px) {
+    #box{
+        padding: 0 auto 0;
+    }
 #title{
+    margin-left: 5%;
+    display: block;
     font-size: 4.5em;
-    margin: 0;
+    margin-left: 3%;
 }
-#sub{
-    margin: 0;
-    font-size: 2em; 
+    #sub{
+    margin-left: 5%;
+    display: block;
+    font-size: 2.6em;
+    font-weight: lighter;
+    margin-left: 3%;
 }
 #content{
     text-align: left;
@@ -171,6 +181,9 @@ body
     #splash{
     width: 100%;
 }
+.title{
+    font-size: 1.5em;
+    }
     #logo{
         padding: 100px 0 0;
     }
