--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2575,7 +2575,7 @@
 
 			ul.actions li {
 				display: inline-block;
-				padding: 0 1em 0 0;
+				padding: 0 0 0 0;
 				vertical-align: middle;
 			}
 
