--- a/assets/css/teach.css
+++ b/assets/css/teach.css
@@ -58,7 +58,32 @@
 	}
 
 /* Grid */
+.box_box{
+	width: 60%;
+	margin: 0 auto 2em;
+}
 
+@media screen and(max-width: 720px)
+{
+	.box_box{
+	width: 100%;
+}
+}
+.video-container {
+position: relative;
+padding-bottom: 56.25%;
+padding-top: 30px; height: 0; overflow: hidden;
+}
+ 
+.video-container iframe,
+.video-container object,
+.video-container embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
 	.img{
 		width: 90%;
 		transition: 0.3s all;
@@ -2524,6 +2549,9 @@
 					ul.icons.major li .icon:before {
 						font-size: 1.75rem;
 					}
+				.box_box{
+					width: 100%;
+				}
 
 			}
 
