--- a/assets/css/teach.css
+++ b/assets/css/teach.css
@@ -1707,7 +1707,7 @@ height: 100%;
 		}
 
 	body, input, select, textarea {
-		font-family: Arial, Helvetica, sans-serif, Kanit;
+		font-family: Arial, Helvetica, "Kanit", sans-serif;
 		font-weight: normal;
 		line-height: 1.5em;
 		letter-spacing: -0.015em;
