--- a/assets/css/teach.css
+++ b/assets/css/teach.css
@@ -1,5 +1,5 @@
 @import url(font-awesome.min.css);
-@import url('https://fonts.googleapis.com/css?family=Kanit');
+@import url('https://fonts.googleapis.com/css?family=Kanit&subset=thai');
 
 /*
 	Fractal by HTML5 UP
